Get QC query of all A records vs blastdb of all E records working
Also add ability to run test with differing blast parameters, and with different sorts of the blast results.

Build scripts to tabulate the blast results (best hit, number of hits, etc):
 * results/extract_results.sh
 * results/sbatch_extract_results.sh

Add ability to parallize query by genus and blast parameters
 * sbatch_modes_by_genus_test_e.sh (sbatch's test_e_accessions.sh)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# editor files
+\#*
+*~
+# conda environments
+conda/
+# Blast DB files
 *.ndb
 *.nhr
 *.nin
@@ -5,29 +11,10 @@
 *.nsq
 *.ntf
 *.nto
-output/results.out
-blast/
-fasta/
-fasta_new_vmr/
-Genus_MSA/
-Input_MSA/
-MSA_test/
-output/
-Output_MSA/
-query/
-seg_MSA/
-seg_MSA1/
-VMR/
+# downloaded fasta
 *.fa
-*.fasta
-*.csv
-*.xlsx
-*.npy
-*.err
-*.out
-*.txt
-*.sqlite
-*.sql
-*.xml
-*.allfa
-*.msa
+# blast results
+results/*/**.csv
+# SLuRM files
+logs
+log.*
